tdf#135187 DOCX import: fix table style at character formatting

applied on paragraph level.

See also commit 5ac6f02fdc6015a5d78071570dee310febf95fc6
(tdf#105215 DOCX import: fix paragraph-length direct formatting).

Change-Id: I14072c81fc4c54e376a004fa36ba76b56d2beb01